--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "rich>=13.0.0",
     "pydantic>=2.0.0",
     "PyYAML>=6.0",
-    "prompt-toolkit>=3.0.0"
+    "prompt-toolkit>=3.0.0",
+    "fastapi>=0.100.0",
+    "uvicorn[standard]>=0.20.0",
+    "sse-starlette>=1.6.0"
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -24,3 +27,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["monoco"]
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
+]
