--- a/monoco.yaml
+++ b/monoco.yaml
@@ -1,7 +1,9 @@
 project:
-  name: "Monoco Toolkit"
-  key: "TOO"
-
+  name: Monoco Toolkit
+  key: TOO
+  spike_repos:
+    vibe-kanban: https://github.com/BloopAI/vibe-kanban
 i18n:
-  source_lang: "en"
-  target_langs: ["zh"]
+  source_lang: en
+  target_langs:
+  - zh
