--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "prompt-toolkit>=3.0.0",
     "fastapi>=0.100.0",
     "uvicorn[standard]>=0.20.0",
-    "sse-starlette>=1.6.0"
+    "sse-starlette>=1.6.0",
+    "watchdog>=6.0.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
