chore: initial commit for monoco-toolkit v0.1.0

--- a/monoco.yaml
+++ b/monoco.yaml
@@ -1,9 +1,11 @@
 project:
   name: Monoco Toolkit
   key: TOO
+  members:
+    MON: ".."
   spike_repos:
     vibe-kanban: https://github.com/BloopAI/vibe-kanban
 i18n:
   source_lang: en
   target_langs:
-  - zh
+    - zh
