--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -20,25 +20,25 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd Toolkit/Kanban
+          cd Kanban
           npm install
 
       - name: Build WebUI
         run: |
-          cd Toolkit/Kanban
+          cd Kanban
           npm run build --workspace=@monoco/kanban-webui
 
       - name: Prepare Package
         run: |
-          mkdir -p Toolkit/Kanban/packages/monoco-kanban/dist
-          cp -r Toolkit/Kanban/apps/webui/out/* Toolkit/Kanban/packages/monoco-kanban/dist/
+          mkdir -p Kanban/packages/monoco-kanban/dist
+          cp -r Kanban/apps/webui/out/* Kanban/packages/monoco-kanban/dist/
           # Sync version from tag
           VERSION=${GITHUB_REF#refs/tags/v}
-          sed -i "s/\"version\": \"0.1.0\"/\"version\": \"$VERSION\"/g" Toolkit/Kanban/packages/monoco-kanban/package.json
+          sed -i "s/\"version\": \"0.1.0\"/\"version\": \"$VERSION\"/g" Kanban/packages/monoco-kanban/package.json
 
       - name: Publish to NPM
         run: |
-          cd Toolkit/Kanban/packages/monoco-kanban
+          cd Kanban/packages/monoco-kanban
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
