--- a/Kanban/packages/core/package.json
+++ b/Kanban/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monoco/kanban-core",
+  "name": "@monoco-io/kanban-core",
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
