--- a/Kanban/apps/webui/package.json
+++ b/Kanban/apps/webui/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.0.0",
-    "@blueprintjs/icons": "^5.0.0",
+    "@blueprintjs/core": "^6.0.0",
+    "@blueprintjs/icons": "^6.0.0",
     "@monaco-editor/react": "^4.6.0",
     "@monoco-io/kanban-core": "*",
     "@tailwindcss/typography": "^0.5.19",
     "monaco-editor": "^0.55.1",
-    "next": "latest",
+    "next": "14.2.5",
     "normalize.css": "^8.0.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "^10.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9",
-    "eslint-config-next": "latest",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "latest"
