chore(kanban): upgrade dependencies to Next.js 16 and React 19

--- a/Kanban/apps/webui/tsconfig.json
+++ b/Kanban/apps/webui/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@monoco/kanban-core": ["../../packages/core/src/index.ts"]
+      "@monoco-io/kanban-core": ["../../packages/core/src/index.ts"]
     }
   },
   "include": [
