--- a/Kanban/package.json
+++ b/Kanban/package.json
@@ -9,5 +9,9 @@
     "build": "npm run build --workspaces",
     "dev": "npm run dev --workspace=@monoco-io/kanban-webui",
     "start": "npm run start --workspace=@monoco-io/kanban-webui"
+  },
+  "overrides": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
