--- a/Kanban/apps/webui/package.json
+++ b/Kanban/apps/webui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monoco-io/kanban-webui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3123",
@@ -30,7 +30,10 @@
     "react-markdown": "^10.0.1",
     "serve": "^14.2.5",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
