--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     tags:
-      - "toolkit-v*"
+      - "v*"
     paths:
       - "extensions/vscode/**"
       - ".github/workflows/publish-vscode-extension.yml"
@@ -55,13 +55,13 @@ jobs:
           if-no-files-found: error
 
       - name: Publish to VS Code Marketplace
-        if: startsWith(github.ref, 'refs/tags/toolkit-v')
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: npx @vscode/vsce publish --pat ${{ secrets.VSCE_PAT }}
 
       - name: Publish to Open VSX
-        if: startsWith(github.ref, 'refs/tags/toolkit-v')
+        if: startsWith(github.ref, 'refs/tags/v')
         env:
           OVSX_PAT: ${{ secrets.OVSX_PAT }}
         run: npx ovsx publish ./*.vsix --pat ${{ secrets.OVSX_PAT }}
