--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -51,11 +51,11 @@ jobs:
           path: extensions/vscode/*.vsix
           if-no-files-found: error
 
-      - name: Publish to VS Code Marketplace
+      - name: Create Open VSX Namespace
         if: startsWith(github.ref, 'refs/tags/v')
         env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
-        run: npx @vscode/vsce publish --pat ${{ secrets.VSCE_PAT }}
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
+        run: npx ovsx create-namespace indenscale --pat ${{ secrets.OVSX_PAT }} || echo "Namespace might already exist"
 
       - name: Publish to Open VSX
         if: startsWith(github.ref, 'refs/tags/v')
