--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Install Server Dependencies
+        run: cd server && npm ci
+
       - name: Compile
         run: npm run compile
 
