--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,42 +20,17 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-          cache-dependency-path: "Toolkit/pyproject.toml"
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version-file: "Toolkit/pyproject.toml"
+          python-version: "3.12"
 
       - name: Install Python Dependencies
-        run: |
-          cd Toolkit
-          uv sync --all-extras --dev
+        run: uv sync --all-extras --dev
 
       - name: Run Issue Lint
-        run: |
-          cd Toolkit
-          uv run monoco issue lint --recursive
+        run: uv run monoco issue lint --recursive
 
       - name: Run Python Tests
-        run: |
-          cd Toolkit
-          uv run pytest
-
-      # ----------------------------------------------------
-      # Node.js / Kanban Setup
-      # ----------------------------------------------------
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          cache-dependency-path: Kanban/package-lock.json
-
-      - name: Install Node Dependencies
-        working-directory: ./Kanban
-        run: npm ci
-
-      - name: Build Kanban
-        working-directory: ./Kanban
-        run: npm run build
+        run: uv run pytest
