--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -1,3 +1,11 @@
 project:
   key: TOO
-  name: Toolkit
+  name: Monoco Toolkit
+  members:
+    MON: ..
+  spike_repos:
+    vibe-kanban: https://github.com/BloopAI/vibe-kanban
+    gemini-cli: https://github.com/google-gemini/gemini-cli
+    qwen-code: https://github.com/QwenLM/qwen-code
+    skills: https://github.com/anthropics/skills
+    agentskills: https://github.com/agentskills/agentskills
