--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -6,6 +6,9 @@ on:
       - main
     tags:
       - "v*"
+    paths:
+      - "extensions/vscode/**"
+      - ".github/workflows/publish-vscode-extension.yml"
   pull_request:
     paths:
       - "extensions/vscode/**"
