chore(ci): restrict workflow triggers to tags only, disabling main branch ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ["main"]
-    paths-ignore:
-      - "**.md"
-      - "docs/**"
-      - "mkdocs.yml"
-      - "Kanban/docs/**"
+    tags: ["v*"]
   pull_request:
     branches: ["main"]
     paths-ignore:
