--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -4,24 +4,70 @@ on:
   push:
     tags:
       - "v*"
-  pull_request:
-    paths:
-      - "extensions/vscode/**"
-      - ".github/workflows/publish-vscode-extension.yml"
   workflow_dispatch:
 
 jobs:
-  build-and-publish:
-    name: Build, Package and Publish
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: extensions/vscode
+  build-and-package:
+    name: Build ${{ matrix.target }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+            target: linux-x64
+            binary_name: monoco
+          - os: macos-latest
+            target: darwin-arm64
+            binary_name: monoco
+          - os: macos-13
+            target: darwin-x64
+            binary_name: monoco
+          - os: windows-latest
+            target: win32-x64
+            binary_name: monoco.exe
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # ----------------------------------------------------
+      # Python / Binary Build Setup
+      # ----------------------------------------------------
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Python Dependencies
+        run: uv sync --all-extras --dev
+
+      - name: Build CLI Binary
+        run: |
+          uv run --with pyinstaller pyinstaller \
+            --name monoco \
+            --onefile \
+            --clean \
+            --distpath ./dist \
+            --workpath ./build \
+            --specpath ./build \
+            monoco/main.py
+        shell: bash
+
+      - name: Prepare Binary
+        run: |
+          mkdir -p extensions/vscode/bin
+          cp dist/${{ matrix.binary_name }} extensions/vscode/bin/
+        shell: bash
+
+      # ----------------------------------------------------
+      # Node.js / VS Code Extension Package
+      # ----------------------------------------------------
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -31,35 +77,54 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+        working-directory: extensions/vscode
 
       - name: Install Server Dependencies
         run: cd server && npm ci
+        working-directory: extensions/vscode
 
       - name: Compile
         run: npm run compile
+        working-directory: extensions/vscode
 
       - name: Lint
         run: npm run lint
+        working-directory: extensions/vscode
+
+      - name: Prune Server Development Dependencies
+        run: cd server && npm prune --production
+        working-directory: extensions/vscode
 
       - name: Package Extension
-        run: npx @vscode/vsce package
-        # vsce package will generate a .vsix file in the current directory (extensions/vscode)
+        run: npx @vscode/vsce package --target ${{ matrix.target }}
+        working-directory: extensions/vscode
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: monoco-vscode-extension
+          name: vsix-${{ matrix.target }}
           path: extensions/vscode/*.vsix
           if-no-files-found: error
 
+  publish:
+    name: Publish to Open VSX
+    needs: build-and-package
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+          pattern: vsix-*
+          merge-multiple: true
+
       - name: Create Open VSX Namespace
-        if: startsWith(github.ref, 'refs/tags/v')
         env:
           OVSX_PAT: ${{ secrets.OVSX_PAT }}
         run: npx ovsx create-namespace indenscale --pat ${{ secrets.OVSX_PAT }} || echo "Namespace might already exist"
 
       - name: Publish to Open VSX
-        if: startsWith(github.ref, 'refs/tags/v')
         env:
           OVSX_PAT: ${{ secrets.OVSX_PAT }}
-        run: npx ovsx publish ./*.vsix --pat ${{ secrets.OVSX_PAT }}
+        run: npx ovsx publish artifacts/*.vsix --pat ${{ secrets.OVSX_PAT }}
