--- a/Kanban/apps/webui/package.json
+++ b/Kanban/apps/webui/package.json
@@ -30,10 +30,7 @@
     "react-markdown": "^10.0.1",
     "serve": "^14.2.5",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@xterm/xterm": "^5.5.0",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-web-links": "^0.11.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
