--- a/extensions/vscode/.eslintrc.json
+++ b/extensions/vscode/.eslintrc.json
@@ -14,12 +14,31 @@
         "format": ["camelCase", "PascalCase"]
       },
       {
-        "selector": "import",
-        "format": ["camelCase", "PascalCase", "snake_case"]
+        "selector": "variable",
+        "format": ["camelCase", "PascalCase", "UPPER_CASE"]
+      },
+      {
+        "selector": "parameter",
+        "format": ["camelCase"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "memberLike",
+        "modifiers": ["private"],
+        "format": ["camelCase"],
+        "leadingUnderscore": "allow"
       },
       {
         "selector": "typeProperty",
         "format": ["camelCase", "snake_case"]
+      },
+      {
+        "selector": "objectLiteralProperty",
+        "format": ["camelCase", "snake_case", "PascalCase"]
+      },
+      {
+        "selector": "import",
+        "format": ["camelCase", "PascalCase", "snake_case"]
       }
     ],
     "@typescript-eslint/no-unused-vars": [
