--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,7 +56,7 @@ repos:
 
       - id: verify-versions
         name: Verify Version Consistency
-        entry: python Toolkit/scripts/verify_versions.py
+        entry: python scripts/verify_versions.py
         language: system
         stages: [pre-push]
         pass_filenames: false
