chore: enable PR build checks for VitePress site
- Trigger workflow on pull_request to main
- Skip deploy step for PR builds (build check only)

--- a/.github/workflows/deploy-vitepress.yml
+++ b/.github/workflows/deploy-vitepress.yml
@@ -6,6 +6,11 @@ on:
     paths:
       - "site/**"
       - ".github/workflows/deploy-vitepress.yml"
+  pull_request:
+    branches: [main]
+    paths:
+      - "site/**"
+      - ".github/workflows/deploy-vitepress.yml"
   workflow_dispatch:
 
 permissions:
@@ -52,6 +57,7 @@ jobs:
           path: site/.vitepress/dist
 
   deploy:
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
