chore: add VitePress build check to pre-push hooks
- New pre-push hook runs 'npm run build' in site/ directory
- Prevents pushing broken documentation links or build errors
- Only triggers when site/ files are modified

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,14 @@ repos:
         files: ^extensions/vscode/
         pass_filenames: false
 
+      - id: vitepress-build
+        name: VitePress Site Build
+        entry: bash -c "cd site && npm run build"
+        language: system
+        stages: [pre-push]
+        files: ^site/
+        pass_filenames: false
+
       - id: verify-versions
         name: Verify Version Consistency
         entry: python scripts/verify_versions.py
