--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -8,6 +8,7 @@ project:
     SWE-agent: https://github.com/SWE-agent/SWE-agent
     SWE-bench: https://github.com/SWE-bench/SWE-bench
     agentskills: https://github.com/agentskills/agentskills
+    claude-agent-sdk-python: https://github.com/anthropics/claude-agent-sdk-python
     gemini-cli: https://github.com/google-gemini/gemini-cli
     qwen-code: https://github.com/QwenLM/qwen-code
     ralph: https://github.com/snarktank/ralph
