--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -10,6 +10,7 @@ project:
     agentskills: https://github.com/agentskills/agentskills
     claude-agent-sdk-python: https://github.com/anthropics/claude-agent-sdk-python
     gemini-cli: https://github.com/google-gemini/gemini-cli
+    monoco-toolkit: https://github.com/IndenScale/monoco-toolkit
     qwen-code: https://github.com/QwenLM/qwen-code
     ralph: https://github.com/snarktank/ralph
     skills: https://github.com/anthropics/skills
