feat(FEAT-0121): Define Standard Agent Workflows via Flow Skills
- Add flow_engineer, flow_manager, flow_reviewer Flow Skills with Mermaid state diagrams
- Implement flow_skills.py with sync_flow_skills(), update_gitignore(), remove_flow_skills()
- Add comprehensive unit tests (30 test cases, all passing)
- Update AGENTS.md with Standard Flows documentation

Resolves: FEAT-0121

--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -9,6 +9,7 @@ project:
     SWE-bench: https://github.com/SWE-bench/SWE-bench
     agentskills: https://github.com/agentskills/agentskills
     claude-agent-sdk-python: https://github.com/anthropics/claude-agent-sdk-python
+    claude-code: https://github.com/anthropics/claude-code
     gemini-cli: https://github.com/google-gemini/gemini-cli
     monoco-toolkit: https://github.com/IndenScale/monoco-toolkit
     qwen-code: https://github.com/QwenLM/qwen-code
