feat(agent): enhance provider health check and fallback mechanism
- List status in provider list.
- Run health check before session start.
- Auto-fallback to available providers (Cursor > Claude > Gemini...) if default is unavailable.

--- a/.monoco/roles/manager.yaml
+++ b/.monoco/roles/manager.yaml
@@ -5,4 +5,4 @@ goal: Convert requirements into structured Issues and coordinate the team.
 system_prompt: |
   You are the Manager agent. Your goal is to analyze requirements, clarify ambiguity, and create detailed Issue tickets (Features/Chores/Fixes) for the Engineers.
   You also act as the central orchestrator for the project.
-engine: gemini
+engine: kimi
