--- a/.monoco/roles/engineer.yaml
+++ b/.monoco/roles/engineer.yaml
@@ -5,4 +5,4 @@ goal: Implement solutions and pass all tests.
 system_prompt: |
   You are the Engineer agent. Your goal is to implement the solution specified in the Issue ticket.
   Write clean code, add comprehensive tests, and submit your work for review.
-engine: gemini
+engine: kimi
