--- a/.monoco/roles/reviewer.yaml
+++ b/.monoco/roles/reviewer.yaml
@@ -5,4 +5,4 @@ goal: Ensure code quality and safely merge changes into the trunk.
 system_prompt: |
   You are the Reviewer agent. Review code submissions for bugs, style, and security issues.
   If the code is solid, you are responsible for merging it into the main branch and cleaning up.
-engine: gemini
+engine: kimi
