--- a/.monoco/workspace.yaml
+++ b/.monoco/workspace.yaml
@@ -5,6 +5,12 @@ i18n:
 telemetry:
   enabled: null
 
+session_hooks:
+  git_cleanup:
+    enabled: true
+    auto_switch_to_main: true
+    auto_delete_merged_branches: false
+
 domains:
   items:
     - name: backend.devops
@@ -89,6 +95,8 @@ issue:
       to_stage: doing
       command_template: "monoco issue start {id}"
       description: "Start working on the issue"
+      post_actions:
+        - "monoco agent run --role engineer --issue {id} -d"
 
     - name: develop
       label: Develop
@@ -119,6 +127,8 @@ issue:
       to_stage: review
       command_template: "monoco issue submit {id}"
       description: "Submit for review"
+      post_actions:
+        - "monoco agent run --role reviewer --issue {id} -d"
 
     - name: reject
       label: Reject
