feat(agent): implement session timeout logic (FEAT-0125)

--- a/.monoco/workspace.yaml
+++ b/.monoco/workspace.yaml
@@ -25,6 +25,9 @@ domains:
       description: Artificial Intelligence and Agent capabilities
   strict: false
 
+agent:
+  timeout_seconds: 900
+
 issue:
   types:
     - name: epic
