--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -7,6 +7,7 @@ project:
   spike_repos:
     SWE-agent: https://github.com/SWE-agent/SWE-agent
     SWE-bench: https://github.com/SWE-bench/SWE-bench
+    Typedown: https://github.com/IndenScale/Typedown
     agent-client-protocol: https://github.com/agentclientprotocol/agent-client-protocol
     agentskills: https://github.com/agentskills/agentskills
     claude-agent-sdk-python: https://github.com/anthropics/claude-agent-sdk-python
