feat(artifacts): implement FEAT-0151 Artifact Core with CAS storage and manifest registry
- Add ArtifactMetadata Pydantic model with full lifecycle support
- Implement ArtifactManager with CRUD operations
- Add CAS (Content-Addressable Storage) with SHA256 hashing
- Implement manifest.jsonl atomic updates
- Add symlink support for project-local references
- Include comprehensive unit tests (26 tests, all passing)

Resolves: FEAT-0151

--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -5,6 +5,7 @@ project:
   key: TOO
   name: Monoco Toolkit
   spike_repos:
+    MinerU: https://github.com/opendatalab/MinerU
     SWE-agent: https://github.com/SWE-agent/SWE-agent
     SWE-bench: https://github.com/SWE-bench/SWE-bench
     Typedown: https://github.com/IndenScale/Typedown
