--- a/extensions/vscode/client/tsconfig.json
+++ b/extensions/vscode/client/tsconfig.json
@@ -13,7 +13,8 @@
     "baseUrl": "src",
     "paths": {
       "@shared/*": ["../../shared/*"]
-    }
+    },
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules", ".vscode-test"],
   "include": ["src/**/*"]
