--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -18,5 +18,7 @@ project:
     monoco-toolkit: https://github.com/IndenScale/monoco-toolkit
     qwen-code: https://github.com/QwenLM/qwen-code
     ralph: https://github.com/snarktank/ralph
+    refly: https://github.com/refly-ai/refly
+    refly-skills: https://github.com/refly-ai/refly-skills
     skills: https://github.com/anthropics/skills
     vibe-kanban: https://github.com/BloopAI/vibe-kanban
