FEAT-0165: 重构 Memo Inbox 为信号队列模型
- MemoThresholdHandler: 实现读取即清空语义，调度前清空 inbox
- MemoWatcher: 简化计数逻辑，基于 header 模式匹配
- Memo 模型: 删除 status 和 ref 字段
- CLI: 删除 link/resolve 命令，简化 list 命令
- 文档: 更新 AGENTS.md 描述 Signal Queue 模型
- 测试: 32 个测试覆盖新语义，包含重启幂等性测试

--- a/.monoco/project.yaml
+++ b/.monoco/project.yaml
@@ -13,6 +13,7 @@ project:
     agentskills: https://github.com/agentskills/agentskills
     claude-agent-sdk-python: https://github.com/anthropics/claude-agent-sdk-python
     claude-code: https://github.com/anthropics/claude-code
+    codex: https://github.com/openai/codex
     gemini-cli: https://github.com/google-gemini/gemini-cli
     kimi-agent-sdk: https://github.com/MoonshotAI/kimi-agent-sdk
     monoco-toolkit: https://github.com/IndenScale/monoco-toolkit
