docs: refactor documentation into Manifesto-Mechanism-Governance framework

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,11 @@ ENV/
 .coverage
 htmlcov/
 
+# Code Statistics & Coverage Reports
+cloc_*.json
+coverage.json
+output.json
+
 # Node.js
 node_modules/
 npm-debug.log*
