--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
     "pytest-mock>=3.14.0",
     "pre-commit>=3.5.0",
     "pytest-asyncio>=1.3.0",
+    "pytest-cov>=4.1.0",
 ]
 
 [tool.ruff.lint]
