--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "monoco-toolkit"
 version = "0.4.0"
-description = "Agent Native Toolkit for Monoco - Task Management & Kanban for AI Agents"
+description = "The Headless Operating System for Agentic Engineering"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
